k8s/local-ha/fencer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-fencer
  namespace: myflix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-fencer
  template:
    metadata:
      labels:
        app: postgres-fencer
    spec:
      serviceAccountName: postgres-fencer
      containers:
        - name: postgres-fencer
          image: newnetflix:local
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - |
              [...]
          resources:
            requests:
              cpu: "20m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
