k8s/local-ha/pgpool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-proxy
  namespace: myflix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-proxy
  template:
    metadata:
      labels:
        app: postgres-proxy
    spec:
      containers:
        - name: newnetflix-pgpool
          image: bitnamilegacy/pgpool:4.6.3
          ports:
            - name: postgresql
              containerPort: 5432
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: myflix
spec:
  selector:
    app: postgres-proxy
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
