k8s/local-ha/postgres-ha.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-ha-headless
  namespace: myflix
spec:
  clusterIP: None
  selector:
    app: postgres-ha
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-ha
  namespace: myflix
spec:
  serviceName: postgres-ha-headless
  replicas: 3
  selector:
    matchLabels:
      app: postgres-ha
  template:
    metadata:
      labels:
        app: postgres-ha
    spec:
      containers:
        - name: newnetflix-db
          image: bitnamilegacy/postgresql-repmgr:17.6.0
          command:
            - /bin/bash
            - -ec
            - |
              [...]
          ports:
            - name: postgresql
              containerPort: 5432
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - pg_isready -U backend_user -d Django_DB
            initialDelaySeconds: 15
            periodSeconds: 10
          startupProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - pg_isready -U backend_user -d Django_DB
            periodSeconds: 5
            failureThreshold: 60
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - pg_isready -U backend_user -d Django_DB
            initialDelaySeconds: 180
            periodSeconds: 20
          volumeMounts:
            - name: data
              mountPath: /bitnami/postgresql
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
