k8s/local-ha/networkpolicy-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-ha-ingress-allow-proxy-only
  namespace: myflix
spec:
  podSelector:
    matchLabels:
      app: postgres-ha
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: postgres-proxy
        - podSelector:
            matchLabels:
              app: postgres-ha
      ports:
        - protocol: TCP
          port: 5432
